# multivariate-methods-for-text

./: .gitignore  LICENSE  README.md  compute_examples_classical_methods.py  embedding-analysis.ipynb  pyproject.toml  requirements.txt  streamlit.Dockerfile  streamlit_embedding_app.py
data/: word_collection.py
tests/: test_classical_methods.py  test_embedding.py
text_analysis/: classical_methods.py  embeddings.py
